--- a/tests/BUILD
+++ b/tests/BUILD
@@ -2,7 +2,7 @@ load("@rules_cc//cc:defs.bzl", "cc_binary")
 
 cc_binary(
     name = "sdl_integration",
-    srcs = ["sdl_integration/main.cc"],
+    srcs = ["sdl_integration/main.cpp"],
     deps = [
         "@sdl2",
     ],
