Base: Refactoring of the tools::sdl library

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -10,12 +10,18 @@ cc_library(
 cc_library(
     name = "sdl",
     srcs = [
-        "sdl/sdl.cpp",
+        "sdl/sdl_animation.cpp",
         "sdl/sdl_keyboard_state.cpp",
+        "sdl/sdl_renderer.cpp",
+        "sdl/sdl_system.cpp",
+        "sdl/sdl_window.cpp",
     ],
     hdrs = [
-        "sdl/sdl.hpp",
+        "sdl/sdl_animation.hpp",
         "sdl/sdl_keyboard_state.hpp",
+        "sdl/sdl_renderer.hpp",
+        "sdl/sdl_system.hpp",
+        "sdl/sdl_window.hpp",
     ],
     visibility = ["//visibility:public"],
     deps = [
