Wolf: Preparation to load Wolf3d map files

--- a/projects/wolf/BUILD
+++ b/projects/wolf/BUILD
@@ -10,6 +10,10 @@ cc_binary(
         "player_state.hpp",
         "raw_map.cpp",
         "raw_map.hpp",
+        "raw_map_from_ascii.cpp",
+        "raw_map_from_ascii.hpp",
+        "raw_map_from_wolf.cpp",
+        "raw_map_from_wolf.hpp",
         "renderer.cpp",
         "renderer.hpp",
         "vector_map.cpp",
