Wolf: Loading Wolf3d map files

--- a/projects/wolf/BUILD
+++ b/projects/wolf/BUILD
@@ -18,6 +18,7 @@ cc_binary(
         "renderer.hpp",
         "vector_map.cpp",
         "vector_map.hpp",
+        "wolf_map_info.hpp",
         "wolf_renderer.cpp",
         "wolf_renderer.hpp",
     ],
