OpenGLStreaming: OpenGL frames stored in h264 stream

--- a/projects/streaming/CMakeLists.txt
+++ b/projects/streaming/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_executable(opengl_streamer
   opengl_streamer/main.cpp
-  opengl_streamer/codec.cpp
-  opengl_streamer/codec.hpp
+  opengl_streamer/encoder.cpp
+  opengl_streamer/encoder.hpp
 )
 
 include_directories(${PROJECT_SOURCE_DIR})
@@ -13,3 +13,4 @@ target_link_libraries(opengl_streamer OpenGL)
 target_link_libraries(opengl_streamer ${AVCodec_LIBRARY})
 target_link_libraries(opengl_streamer ${AVFormat_LIBRARY})
 target_link_libraries(opengl_streamer ${AVUtil_LIBRARY})
+target_link_libraries(opengl_streamer ${SWScale_LIBRARY})
