--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,10 @@ if(POLICY CMP0072)
     cmake_policy(SET CMP0072 NEW)
 endif()
 find_package(OpenGL REQUIRED)
-# FFmpeg
 find_library(AVCodec_LIBRARY avcodec)
 find_library(AVFormat_LIBRARY avformat)
 find_library(AVUtil_LIBRARY avutil)
+find_library(SWScale_LIBRARY swscale)
 
 add_subdirectory(projects)
 add_subdirectory(tools)
