--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,10 @@ find_library(AVCodec_LIBRARY avcodec)
 find_library(AVFormat_LIBRARY avformat)
 find_library(AVUtil_LIBRARY avutil)
 find_library(SWScale_LIBRARY swscale)
+find_package(glm REQUIRED)
+find_package(GLEW REQUIRED)
+find_package(LibDataChannel REQUIRED)
+find_package(nlohmann_json REQUIRED)
 
 add_subdirectory(projects)
 add_subdirectory(tools)
