--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(tools_sdl STATIC 
   sdl/sdl_animation.cpp
   sdl/sdl_animation.hpp
+  sdl/sdl_gl_context.cpp
+  sdl/sdl_gl_context.hpp
   sdl/sdl_keyboard_state.cpp
   sdl/sdl_keyboard_state.hpp
   sdl/sdl_renderer.cpp
@@ -16,4 +18,9 @@ target_link_libraries(tools_sdl SDL2)
 add_library(tools_math STATIC 
   math/math.cpp
   math/math.hpp
+)
+
+add_library(tools_utils STATIC 
+  utils/utils.cpp
+  utils/utils.hpp
 )
