--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,4 +1,9 @@
-add_library(tools_sdl STATIC 
+add_library(tools_math STATIC
+  math/math.cpp
+  math/math.hpp
+)
+
+add_library(tools_sdl STATIC
   sdl/sdl_animation.cpp
   sdl/sdl_animation.hpp
   sdl/sdl_gl_context.cpp
@@ -13,14 +18,9 @@ add_library(tools_sdl STATIC
   sdl/sdl_window.hpp
 )
 
-target_link_libraries(tools_sdl SDL2)
+target_link_libraries(tools_sdl SDL2::SDL2)
 
-add_library(tools_math STATIC 
-  math/math.cpp
-  math/math.hpp
-)
-
-add_library(tools_utils STATIC 
+add_library(tools_utils STATIC
   utils/utils.cpp
   utils/utils.hpp
 )
