--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,17 +3,14 @@ cmake_minimum_required(VERSION 3.15)
 project(sandbox CXX)
 
 find_package(Boost COMPONENTS program_options REQUIRED)
-#find_library(AVCodec_LIBRARY avcodec)
-#find_library(AVFormat_LIBRARY avformat)
-#find_library(AVUtil_LIBRARY avutil)
-#find_library(SWScale_LIBRARY swscale)
-#find_package(GLEW REQUIRED)
+find_package(ffmpeg COMPONENTS avcodec avformat avutil swscale REQUIRED)
+find_package(GLEW REQUIRED)
 find_package(glm REQUIRED)
-#find_package(nlohmann_json REQUIRED)
-#find_package(LibDataChannel REQUIRED)
+find_package(nlohmann_json REQUIRED)
+find_package(LibDataChannel REQUIRED)
 find_package(SDL2 REQUIRED)
-#find_package(OpenGL REQUIRED)
+find_package(OpenGL REQUIRED)
 
 add_subdirectory(tools)
 add_subdirectory(projects/wolf)
-#add_subdirectory(projects/streaming)
+add_subdirectory(projects/streaming)
