6: Unify tools::common::UserInput
- Unify tools::common::UserInput so that it can be created from events that comes from SDL but also is prepared for events of other systems.
- Ongoing work with some issues at build
  - rtc (libdatachannel) header need to be included in streaming_common
  - conflict with ERROR enum of Decoder::Status::Code
- Event conversion from/to JSON

--- a/streaming/streaming_common/CMakeLists.txt
+++ b/streaming/streaming_common/CMakeLists.txt
@@ -4,13 +4,11 @@ add_library(streaming_common STATIC ${SRC_FILES})
 
 target_include_directories(streaming_common PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
 
+target_link_libraries(streaming_common gp)
 target_link_libraries(streaming_common ffmpeg::avcodec)
 target_link_libraries(streaming_common ffmpeg::avformat)
 target_link_libraries(streaming_common ffmpeg::avutil)
 target_link_libraries(streaming_common ffmpeg::swscale)
-target_link_libraries(streaming_common opengl::opengl)
-target_link_libraries(streaming_common glad::glad)
-target_link_libraries(streaming_common glfw)
 
 set_target_properties(streaming_common PROPERTIES
   FOLDER ${SOLUTION_FOLDER}
