--- a/gp/CMakeLists.txt
+++ b/gp/CMakeLists.txt
@@ -15,6 +15,14 @@ add_library(gp STATIC ${SRC_FILES})
 target_include_directories(gp PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
 target_include_directories(gp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
+target_link_libraries(gp PRIVATE ffmpeg::avcodec)
+target_link_libraries(gp PRIVATE ffmpeg::avformat)
+target_link_libraries(gp PRIVATE ffmpeg::avutil)
+target_link_libraries(gp PRIVATE ffmpeg::swscale)
+target_link_libraries(gp PRIVATE glad::glad)
+target_link_libraries(gp PRIVATE glfw)
+target_link_libraries(gp PRIVATE nlohmann_json::nlohmann_json)
+target_link_libraries(gp PRIVATE opengl::opengl)
 target_link_libraries(gp PRIVATE SDL2::SDL2)
 
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SRC_FILES})
