12: Switch to GLFW (replace any use of GLEW)
- The target is to have a one generic gl scene class that is managed by
  glfw, and one generic draw scene that is for 2d graphics managed by
  SDL2 - only these two configurations (e.g not opengl based on SDL2).
- Most work regarding generic Event is done
  - conversion from SDL to generic Event
  - conversion from and to JSON of generic Event
  - handling of union complex types in event (proper
    destruction/construction etc.)
- Integrated gp::glfw::SceneGL with loader_assimp
- Processing of the user input events - generating appropriate Event(s)
- Cleanups

--- a/loaders/loaders_assimp/CMakeLists.txt
+++ b/loaders/loaders_assimp/CMakeLists.txt
@@ -3,14 +3,11 @@ file(GLOB SRC_FILES *.cpp *.hpp)
 add_executable(loaders_assimp ${SRC_FILES})
 
 target_link_libraries(loaders_assimp gp)
-target_link_libraries(loaders_assimp SDL2::SDL2)
-target_link_libraries(loaders_assimp SDL2::SDL2main)
 target_link_libraries(loaders_assimp Boost::program_options)
-target_link_libraries(loaders_assimp opengl::opengl)
+target_link_libraries(loaders_assimp glad::glad)
+target_link_libraries(loaders_assimp glfw)
 target_link_libraries(loaders_assimp glm::glm)
-target_link_libraries(loaders_assimp GLEW::GLEW)
 target_link_libraries(loaders_assimp assimp::assimp)
-target_link_libraries(loaders_assimp imgui::imgui)
 
 add_custom_command(TARGET loaders_assimp PRE_BUILD
   COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different
