--- a/loaders/loaders_assimp/CMakeLists.txt
+++ b/loaders/loaders_assimp/CMakeLists.txt
@@ -9,19 +9,24 @@ target_link_libraries(loaders_assimp glfw)
 target_link_libraries(loaders_assimp glm::glm)
 target_link_libraries(loaders_assimp assimp::assimp)
 
-add_custom_command(TARGET loaders_assimp PRE_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different
-  ${CMAKE_CURRENT_SOURCE_DIR}/shaders $<TARGET_FILE_DIR:loaders_assimp>/shaders
-)
+add_custom_command(
+  TARGET loaders_assimp
+  PRE_BUILD
+  COMMAND
+    ${CMAKE_COMMAND} -E copy_directory_if_different
+    ${CMAKE_CURRENT_SOURCE_DIR}/shaders
+    $<TARGET_FILE_DIR:loaders_assimp>/shaders)
 
-add_custom_command(TARGET loaders_assimp PRE_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different
-  ${CMAKE_CURRENT_SOURCE_DIR}/data $<TARGET_FILE_DIR:loaders_assimp>/data
-)
+add_custom_command(
+  TARGET loaders_assimp
+  PRE_BUILD
+  COMMAND
+    ${CMAKE_COMMAND} -E copy_directory_if_different
+    ${CMAKE_CURRENT_SOURCE_DIR}/data $<TARGET_FILE_DIR:loaders_assimp>/data)
 
-set_target_properties(loaders_assimp PROPERTIES
-  FOLDER ${SOLUTION_FOLDER}
-  VS_DEBUGGER_WORKING_DIRECTORY $<TARGET_FILE_DIR:loaders_assimp>
-)
+set_target_properties(
+  loaders_assimp
+  PROPERTIES FOLDER ${SOLUTION_FOLDER} VS_DEBUGGER_WORKING_DIRECTORY
+                                       $<TARGET_FILE_DIR:loaders_assimp>)
 
 source_group(${SOURCE_GROUP_LABEL} FILES ${SRC_FILES})
