--- a/streaming/CMakeLists.txt
+++ b/streaming/CMakeLists.txt
@@ -1,5 +1,7 @@
 set(SOLUTION_FOLDER streaming)
-set(LIBDATACHANNEL_DLL_BIN "$<IF:$<CONFIG:Debug>,${libdatachannel_PACKAGE_FOLDER_DEBUG}/bin,${libdatachannel_PACKAGE_FOLDER_RELEASE}/bin>")
+set(LIBDATACHANNEL_DLL_BIN
+    "$<IF:$<CONFIG:Debug>,${libdatachannel_PACKAGE_FOLDER_DEBUG}/bin,${libdatachannel_PACKAGE_FOLDER_RELEASE}/bin>"
+)
 
 add_subdirectory(streaming_common)
 add_subdirectory(streaming_encode_decode)
