--- a/wolf/wolf_common/CMakeLists.txt
+++ b/wolf/wolf_common/CMakeLists.txt
@@ -8,8 +8,6 @@ target_link_libraries(wolf_common gp)
 target_link_libraries(wolf_common SDL2::SDL2)
 target_link_libraries(wolf_common glm::glm)
 
-set_target_properties(wolf_common PROPERTIES
-  FOLDER ${SOLUTION_FOLDER}
-)
+set_target_properties(wolf_common PROPERTIES FOLDER ${SOLUTION_FOLDER})
 
 source_group(${SOURCE_GROUP_LABEL} FILES ${SRC_FILES})
