--- a/wolf/wolf_multithread/CMakeLists.txt
+++ b/wolf/wolf_multithread/CMakeLists.txt
@@ -2,7 +2,9 @@ file(GLOB SRC_FILES *.cpp *.hpp)
 
 add_executable(wolf_multithread ${SRC_FILES})
 
+target_link_libraries(wolf_multithread gp)
 target_link_libraries(wolf_multithread wolf_common)
+target_link_libraries(wolf_multithread SDL2::SDL2)
 target_link_libraries(wolf_multithread SDL2::SDL2main)
 target_link_libraries(wolf_multithread Boost::program_options)
 
