29: Created simple model loader using cgltf library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(glm REQUIRED)
 find_package(LibDataChannel REQUIRED)
 find_package(nlohmann_json REQUIRED)
 find_package(SDL2 REQUIRED)
+find_package(cgltf REQUIRED)
 
 set(SOURCE_GROUP_LABEL src)
 
