32: Prepared single-player Pong game

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,10 +19,12 @@ find_package(glm REQUIRED)
 find_package(LibDataChannel REQUIRED)
 find_package(nlohmann_json REQUIRED)
 find_package(SDL2 REQUIRED)
+find_package(SDL2_ttf REQUIRED)
 find_package(cgltf REQUIRED)
 
 set(SOURCE_GROUP_LABEL src)
 
+add_subdirectory(ai)
 add_subdirectory(gp)
 add_subdirectory(loaders)
 add_subdirectory(streaming)
